--- a/frontend/src/app/pages/play/play.component.css
+++ b/frontend/src/app/pages/play/play.component.css
@@ -34,11 +34,16 @@
   display: flex;
   flex-wrap: wrap;
   padding: 1rem;
-  height: 42%;
+  height: 42.5%;
   min-height: 200px;
   width: 100%;
   background-color: var(--secondary-color);
   border-radius: 6px 6px 0px 0px;
+}
+.participants-container {
+  position: absolute;
+  bottom: 0;
+  z-index: 6;
 }
 .participant {
   border-radius: 6px;
@@ -47,15 +52,22 @@
   padding: 0.75rem 1.25rem;
   background-color: var(--primary-color);
   position: relative;
+  display: flex;
+  align-items: start;
 }
-
 .kick-icon {
   cursor: pointer;
   transition: opacity 0.2s ease;
   color: var(--white-color);
-  position: absolute;
-  right: 3px;
-  top: 0;
+  font-size: 2rem;
+  height: 10px;
+}
+.bi-x::before {
+  display: flex;
+  margin-top: 5px;
+}
+.has-answered {
+  background-color: #0565d1;
 }
 canvas {
   max-height: 150px;
@@ -83,12 +95,24 @@ canvas {
 }
 .quiz-progression {
   margin: 0.25rem;
-  padding: 0.25rem 0.5rem;
+  padding: 0.2rem 0.5rem;
   background-color: var(--secondary-color);
   border-radius: 6px;
   position: absolute;
-  top: 0;
+  top: 20vh;
+
   right: 0;
+}
+.show-participants {
+  margin: 0.25rem;
+  padding: 0rem 0.5rem;
+  background-color: var(--secondary-color);
+  border-radius: 6px;
+  position: absolute;
+  top: 20vh;
+  left: 0;
+  cursor: pointer;
+  z-index: 10;
 }
 .left,
 .right {
@@ -225,7 +249,7 @@ h3 {
   align-items: end;
   justify-content: center;
   gap: 2rem;
-  margin-top: 4rem;
+  padding-top: 4rem;
 }
 .statistic-content-mobile {
   display: none;
@@ -233,8 +257,8 @@ h3 {
 }
 .statistic-content-open {
   height: 100%;
-  flex-direction: column;
-  align-self: center;
+  width: 100%;
+  display: flex;
 }
 .statistic-container {
   justify-content: end;
@@ -259,6 +283,8 @@ h3 {
   flex-wrap: nowrap;
 }
 .statistic-item-open {
+  height: min-content;
+  width: min-content;
   display: flex;
   align-items: center;
   padding: 0.5rem 0.75rem;
@@ -269,9 +295,10 @@ h3 {
 .leaderboard-container {
   flex-direction: column;
   justify-content: start;
+  padding: 0.5rem;
 }
 .leaderboard-content {
-  width: 80%;
+  width: 70%;
   max-width: 1000px;
   margin: 0.75rem;
   padding: 0.5rem 0.75rem;
@@ -292,9 +319,12 @@ h3 {
 }
 .divider {
   width: 100%;
-  height: 6px;
+  height: 2px;
   border-radius: 6px;
   background-color: var(--white-color);
+}
+.display-none {
+  display: none;
 }
 
 @media (max-width: 992px) {
@@ -337,6 +367,11 @@ h3 {
       height: 26px;
     }
   }
+  .statistic-item-open {
+    h2 {
+      font-size: calc(0.4rem + 3vw);
+    }
+  }
 }
 
 @media (max-width: 576px) {
@@ -366,5 +401,12 @@ h3 {
     h1 {
       font-size: calc(3vw + 0.75rem);
     }
+  }
+  .statistic-content-open {
+    flex-direction: column;
+    align-items: center;
+  }
+  .statistic-item-open {
+    padding: 0.125rem 0.25rem;
   }
 }
