feat: show room locked on join/home

--- a/frontend/src/app/components/room/room.component.html
+++ b/frontend/src/app/components/room/room.component.html
@@ -9,6 +9,9 @@
     </h5>
   </div>
   <span>{{ room.roomId }}</span>
+  @if(room.locked){
+  <i class="bi bi-lock-fill"></i>
+  }
 </div>
 <div class="card-back" [style.backgroundColor]="randomColor2">
   <h4>Participants {{ room.participantCount }}</h4>
@@ -16,5 +19,7 @@
   <h4>Mode {{ room.mode?.type }}</h4>
   @if(room.mode?.type == "team"){
   <h4>Teams {{ room.mode?.teams }}</h4>
+  } @if(room.locked){
+  <i class="bi bi-lock-fill"></i>
   }
 </div>
