--- a/frontend/src/app/components/room/room.component.css
+++ b/frontend/src/app/components/room/room.component.css
@@ -16,6 +16,14 @@
 :host:hover .card-front {
   transform: rotateY(180deg);
 }
+
+i {
+  color: var(--white-color);
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  margin: 0.5rem;
+}
 .card-front,
 .card-back {
   position: absolute;
@@ -31,6 +39,9 @@
 }
 .card-back {
   transform: rotateY(180deg);
+  i {
+    left: 0;
+  }
 }
 
 h5 {
@@ -57,6 +68,7 @@ span {
 
   padding: 0.25rem;
 }
+
 @media (max-width: 992px) {
   :host {
     width: calc(50% - 1.5rem);
