--- a/frontend/src/app/pages/join-room/join-room.component.css
+++ b/frontend/src/app/pages/join-room/join-room.component.css
@@ -27,6 +27,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   flex: 1;
+  position: relative;
 }
 .inputs {
   display: flex;
@@ -51,6 +52,13 @@ button {
   background-color: var(--primary-color);
   border-radius: 6px;
   margin: 0.25rem;
+}
+i {
+  color: var(--white-color);
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 0.5rem;
 }
 @media (max-width: 576px) {
   .-container {
