--- a/frontend/src/app/pages/play/play.component.css
+++ b/frontend/src/app/pages/play/play.component.css
@@ -64,7 +64,7 @@
 }
 .bi-x::before {
   display: flex;
-  margin-top: 5px;
+  margin-top: 4px;
 }
 .has-answered {
   background-color: #0565d1;
@@ -259,6 +259,22 @@ h3 {
   height: 100%;
   width: 100%;
   display: flex;
+  flex-direction: column;
+}
+.statistic-content-header {
+  display: flex;
+  justify-content: center;
+  h1 {
+    background-color: #229000;
+    width: fit-content;
+    padding: 0.5rem 0.75rem;
+    border-radius: 6px;
+  }
+}
+.statistic-content-inner {
+  height: 100%;
+  width: 100%;
+  display: flex;
 }
 .statistic-container {
   justify-content: end;
@@ -284,7 +300,7 @@ h3 {
 }
 .statistic-item-open {
   height: min-content;
-  width: min-content;
+  width: fit-content;
   display: flex;
   align-items: center;
   padding: 0.5rem 0.75rem;
@@ -326,8 +342,16 @@ h3 {
 .display-none {
   display: none;
 }
-
+.incorrect-icon {
+  font-size: 2.65rem;
+}
 @media (max-width: 992px) {
+  .incorrect-icon {
+    font-size: calc(1.375rem + 1.5vw);
+    i::before {
+      margin-top: 0rem;
+    }
+  }
   .statistic-content-desktop {
     display: none;
   }
