--- a/frontend/src/app/components/quiz/quiz.component.css
+++ b/frontend/src/app/components/quiz/quiz.component.css
@@ -1,13 +1,12 @@
 :host {
   width: 100%;
-  background-color: var(--secondary-color);
   display: flex;
   flex-direction: column;
   padding: 0rem 0.75rem 0.75rem 0.75rem;
 }
 ul {
   text-align: left;
-  margin-bottom: 0rem;
+  margin-bottom: 0;
 }
 button {
   margin-top: 0.5rem;
@@ -19,8 +18,10 @@ button {
 button {
   max-width: 175px;
 }
-p {
+p,
+h6 {
   text-align: left;
+  margin: 0rem;
 }
 .header {
   display: flex;
@@ -30,10 +31,13 @@ p {
     cursor: pointer;
   }
 }
+.quiz-name {
+  margin-top: 0.25rem;
+}
 .divider {
   width: 100%;
   height: 2px;
   border-radius: 6px;
   background-color: var(--white-color);
-  margin: 0.75rem 0 0rem 0rem;
+  margin-top: 0.75rem;
 }
