--- a/frontend/src/app/pages/play/play.component.css
+++ b/frontend/src/app/pages/play/play.component.css
@@ -30,6 +30,12 @@
     opacity: 0.8;
   }
 }
+
+.team-participants {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
 .participants {
   display: flex;
   flex-wrap: wrap;
@@ -49,6 +55,7 @@
   border-radius: 6px;
   margin: 0.5rem;
   height: min-content;
+  width: fit-content;
   padding: 0.75rem 1.25rem;
   background-color: var(--primary-color);
   position: relative;
@@ -345,6 +352,15 @@ h3 {
 .incorrect-icon {
   font-size: 2.65rem;
 }
+.teams-score {
+  align-self: self-start;
+}
+.leaderboard-content {
+  text-align: center;
+}
+.leaderboard-content-team {
+  width: fit-content;
+}
 @media (max-width: 992px) {
   .incorrect-icon {
     font-size: calc(1.375rem + 1.5vw);
@@ -419,6 +435,7 @@ h3 {
   .lobby-header > h1 {
     display: none;
   }
+
   .question-header {
     margin: 0.75rem;
     padding: 0.5rem 0.75rem;
