--- a/frontend/src/app/pages/quizzes/quizzes.component.css
+++ b/frontend/src/app/pages/quizzes/quizzes.component.css
@@ -23,8 +23,9 @@
   padding: 1rem;
 }
 .quizzes-container {
-  padding: 0.75rem 0;
+  padding-top: 0.75rem;
   margin-bottom: 2rem;
+  min-height: 65px;
 }
 h3 {
   text-align: center;
