--- a/frontend/src/app/pages/play/play.component.html
+++ b/frontend/src/app/pages/play/play.component.html
@@ -2,7 +2,10 @@
 <div class="participants participants-container">
   @if(room){ @if(room.mode?.type == "ffa" || room.mode?.type == "coop"){ @for(
   participant of room.participants; track participant){
-  <div class="participant">
+  <div
+    class="participant"
+    [class.has-answered]="participant.totalAnswers >= room.quizProgression"
+  >
     <h3>
       {{ participant.name }}
     </h3>
@@ -16,7 +19,10 @@
     <h4>Team {{ $index + 1 }}</h4>
     <div class="team-participants">
       @for (participant of team; track participant.name) {
-      <div class="participant">
+      <div
+        class="participant"
+        [class.has-answered]="participant.totalAnswers >= room.quizProgression"
+      >
         <h3>
           {{ participant.name }}
         </h3>
