--- a/frontend/src/app/pages/play/play.component.css
+++ b/frontend/src/app/pages/play/play.component.css
@@ -97,7 +97,7 @@ canvas {
   justify-content: space-between;
   z-index: 5;
   h3 {
-    margin-bottom: 3rem;
+    margin-bottom: 8vh;
   }
 }
 .quiz-progression {
